@@ -1,4 +1,4 @@
 @set UPDATED 29 November 2002
 @set UPDATED-MONTH November 2002
-@set EDITION 1.7.1b
-@set VERSION 1.7.1b
+@set EDITION 1.7.1c
+@set VERSION 1.7.1c
