@@ -1,4 +1,4 @@
-Bugs fixed in 1.7.1b:
+Bugs fixed in 1.7.1c:
 * Fix ansi2knr rules for LIBOBJS sources.
 * Clean all known Texinfo index files, not only those which appear to
   be used, because we cannot know wich indexes are used in included files.
