@@ -1,5 +1,7 @@
 2002-12-01  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* configure.in, NEWS: Bump version to 1.7.1c.
+
 	* configure.in, NEWS: Bump version to 1.7.1b.
 
 	* automake.in (lang_c_finish): Do not fill de_ansi_files with
